--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,14 +2,6 @@ html {
     font-size: 16px !important; 
 }
 
-.uipe-header {
-    background: url('../img/backgrounnd.png') no-repeat;
-    /* background-color: #8888ee; */
-    height: 874px;
-    background-position: top;
-    background-size: 2000px 874px;
-}
-
 .navbar-toggler {
     border: none;
     font-size: 1.25rem;
@@ -619,6 +611,12 @@ article .align-items-center .post-meta .post-date{
 
 /* Extra small devices (phones, less than 576px) */
 @media (max-width: 575.98px) {
+  .header {
+    background: url('../img/backgrounnd.png') no-repeat;
+    height: 874px !important;
+    background-position: top right 30% !important;
+    background-size: 100% 874px ;
+  }
   .index-page .banner__title {
     font-size: 28px;
     line-height: 34px;
@@ -688,9 +686,6 @@ article .align-items-center .post-meta .post-date{
     width: 100%;
     padding: 0 15px;
   }
-  .index-page .uipe-header {
-    background-position: top right !important;
-  }
   .index-page .column {
     width: 100% !important;
   }
@@ -698,6 +693,12 @@ article .align-items-center .post-meta .post-date{
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
+  .header {
+    background: url('../img/backgrounnd.png') no-repeat;
+    height: 874px !important;
+    background-position: top right 30% !important;
+    background-size: 100% 874px ;
+  }
   .banner__title {
     font-size: 36px;
     line-height: 42px;
@@ -773,7 +774,6 @@ article .align-items-center .post-meta .post-date{
   }
 }
 
-/* Newslist page layout */
 .newslist-page .container {
   padding-right: 0 !important;
   padding-left: 0 !important;
@@ -799,6 +799,12 @@ article .align-items-center .post-meta .post-date{
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
+  .header {
+    background: url('../img/backgrounnd.png') no-repeat;
+    height: 874px !important;
+    background-position: top right 40% !important;
+    background-size: 100% 874px ;
+  }
   .banner__title {
     font-size: 44px;
     line-height: 50px;
@@ -881,6 +887,12 @@ article .align-items-center .post-meta .post-date{
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
+  .header {
+    background: url('../img/backgrounnd.png') no-repeat;
+    height: 874px !important;
+    background-position: top !important;
+    background-size: 100% 874px ;
+  }
   .banner__title {
     font-size: 48px;
     line-height: 56px;
@@ -951,6 +963,12 @@ article .align-items-center .post-meta .post-date{
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  .header {
+    background: url('../img/backgrounnd.png') no-repeat;
+    height: 874px !important;
+    background-position: top ;
+    background-size: 100% 874px ;
+  }
   .banner__title {
     font-size: 52px;
     line-height: 62.93px;
